--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nakanim-api-wrapper",
+  "name": "@ablanc/nakanim-api",
   "version": "1.0.0",
-  "description": "This is a node.js wrapper to use nakanim.com API.",
+  "description": "This is a node.js Typescript wrapper to use nakanim.com API.",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
   "prepublish": "tsc",
@@ -13,7 +13,13 @@
     "type": "git",
     "url": "git+https://github.com/adblanc/Nakanim-api-wrapper.git"
   },
-  "keywords": [],
+  "keywords": [
+    "typescript",
+    "node.js",
+    "anime",
+    "api",
+    "wrapper"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
