--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
   "apiUrl": "http://www.nakanim.com/api",
   "apiCalendarUrl": "http://www.nakanim.com/api/calendar",
-  "apiAnimesUrl": "http://www.nakanim.com/api/animes"
+  "apiAnimesUrl": "http://www.nakanim.com/api/animes",
+  "calendarFormat": "YYYY-MM-DD"
 }
