--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "This is a node.js Typescript wrapper to use nakanim.com API.",
   "main": "dist/src/index.js",
   "types": "dist/src/index.d.ts",
+  "files": [
+    "dist/*"
+  ],
   "prepublish": "tsc",
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -31,8 +35,11 @@
     "node-fetch": "^2.6.0"
   },
   "devDependencies": {
+    "@types/jest": "^24.0.24",
     "@types/node": "^13.1.0",
     "@types/node-fetch": "^2.5.4",
+    "jest": "^24.9.0",
+    "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
     "ts-node-dev": "^1.0.0-pre.44",
     "typescript": "^3.7.4"
