--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "apiUrl": "http://www.nakanim.com/api",
   "apiCalendarUrl": "http://www.nakanim.com/api/calendar",
   "apiAnimesUrl": "http://www.nakanim.com/api/animes",
+  "apiRandomAnimesUrl": "http://www.nakanim.com/api/random",
   "calendarFormat": "YYYY-MM-DD"
 }
