--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "start": "ts-node-dev --respawn src/index.ts",
     "build": "tsc",
-    "test": "jest"
+    "test": "jest",
+    "coveralls": "jest --coverage && cat ./coverage/lcov.info | coveralls"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
     "@types/jest": "^24.0.24",
     "@types/node": "^13.1.0",
     "@types/node-fetch": "^2.5.4",
+    "coveralls": "^3.0.9",
     "jest": "^24.9.0",
     "ts-jest": "^24.2.0",
     "ts-node": "^8.5.4",
