--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,6 @@
     "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
     "resolveJsonModule": true
-  }
+  },
+  "include": ["src/**/*"]
 }
